# dastlite

./: .gitignore  AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
dastlite/: __init__.py  __main__.py  active.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  sample_response.json
demos/04-capture/: captures.json  sample.har
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  package.json  test.js
ports/rust/: Cargo.toml
ports/rust/src/: lib.rs  main.rs
ports/typescript/: package.json  tsconfig.json
ports/typescript/src/: index.ts
ports/typescript/test/: index.test.ts
scripts/: ports-test.sh
tests/: test_active.py  test_active_fixture_server.py  test_cli_and_reporters.py  test_connect.py  test_hardening.py  test_input_mode.py  test_passive_checks.py  test_smoke.py
